src/App.css
html {
  background: url('./img/greenFabric2.png');
}

.AppContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  flex-wrap: wrap;
  color: #454545;
}

.Header {
  text-align: center;
  font-weight: 100;
  text-transform: uppercase;
  font-size: 1.4rem;
  background: whitesmoke;
  opacity: 0.8;
  max-width: 24rem;
  box-shadow: 10px 10px 13px -12px rgba(0, 0, 0, 0.75);
  border-radius: 0.3rem;
  margin: 1rem auto 2rem;
  letter-spacing: 0.2rem;
}

.Title {
  text-align: center;
  font-weight: 500;
  margin: 0.5rem 0.5rem 0.5rem 0.8rem;
}

.ContainerTitle {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.FruitContainer {
  position: relative;
  width: 18rem;
  border-radius: 0.7rem;
  margin: 0.5rem;
  padding: 0.1rem 0 1rem 1rem;
  box-shadow: 10px 10px 13px -12px rgba(0, 0, 0, 0.75);
  background: whitesmoke;
}

.FruitContainer:hover {
  transition: all 0.3s;
  box-shadow: 10px 10px 22px -14px rgba(0, 0, 0, 0.75);
}

.FruitContainer:hover:not(.Focused) {
  background: rgb(176, 203, 160);
}

.Focused {
  transition: all 0.3s;
  background: rgb(125, 187, 125);
  box-shadow: 10px 10px 22px -14px rgba(0, 0, 0, 0.75);
}

.PriceContainer {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.PriceField {
  margin: 0;
  width: 3rem;
  height: 1rem;
}

.CurrencyFieldContainer {
  width: 80%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  line-height: 0;
}

.CheckoboxPriceContainer {
  display: flex;
  width: 90%;
  height: 1.8rem;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  line-height: 0;
}

.Paragraph {
  margin: 0.4rem 0.3rem 0.4rem 0;
  font-size: 0.9rem;
}

.Currency {
  margin-left: 0.3rem;
}

.OrderNumber {
  position: absolute;
  right: 89%;
  top: -3%;
}

.PriceDescription {
  font-size: 0.7rem;
}

